# astronomy

./: .gitignore  CMakeLists.txt  README.md
doc/tutorials/: index.md
doc/tutorials/coordinate/: astronomical_coordinate.md  astronomical_coordinate_operation.md  coordinate_conversion.md  coordinate_point.md  euclidean_coordinate.md  motion.md  vector_operation.md
include/boost/: is_base_template_of.hpp
include/boost/astronomy/coordinate/: alt_az.hpp  base_coordinate.hpp  base_coordinate_system.hpp  base_differential.hpp  base_ecliptic_frame.hpp  base_equatorial_frame.hpp  base_frame.hpp  base_representation.hpp  cartesian_differential.hpp  cartesian_representation.hpp  cirs.hpp  coordinate.hpp  differential.hpp  frame.hpp  galactic.hpp  geocentric.hpp  geocentric_frame.hpp  heliocentric.hpp  heliocentric_frame.hpp  icrs.hpp  representation.hpp  sky_point.hpp  spheriacal_representation.hpp  spherical_coslat_differential.hpp  spherical_differential.hpp  spherical_equatorial_differential.hpp  spherical_equatorial_representation.hpp  spherical_representation.hpp  supergalactic.hpp
include/boost/astronomy/detail/: is_base_template_of.hpp
include/boost/astronomy/exception/: fits_exception.hpp
include/boost/astronomy/io/: bitpix.hpp  card.hpp  extension_hdu.hpp  fits.hpp  hdu.hpp  image.hpp  image_extension.hpp  primary_hdu.hpp
test/: CMakeLists.txt  cartesian_representation.cpp  differential.cpp  differential_test.cpp  representation.cpp  representation_test.cpp  spherical_equatorial_representation.cpp  spherical_representation.cpp  test.cpp
